--- a/gtk-3.0/gtk-main.css
+++ b/gtk-3.0/gtk-main.css
@@ -1,6 +1,7 @@
 /* Default color scheme */
 @define-color theme_base_color #fff;
-@define-color theme_alt_color #e8eaed;
+@define-color theme_alt_color #E3E8F5
+/*#e8eaed; *?
 @define-color theme_text_color #3c4c5c;
 @define-color theme_selected_bg_color #4b9ddb;
 @define-color theme_selected_fg_color @theme_base_color;
