--- a/gtk-3.0/gtk-main.css
+++ b/gtk-3.0/gtk-main.css
@@ -1,5 +1,5 @@
 /* Default color scheme */
-@define-color theme_base_color #FAFAFA;
+@define-color theme_base_color #FFF;
 @define-color theme_alt_color #E8EAF0;
 @define-color theme_text_color #3c4c5c;
 @define-color theme_selected_bg_color #4b9ddb;
